# internal/pkg/api/calc.pb.go
@@ -1,0 +1,334 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v6.30.2
+// source: calc.proto
+
+package proto
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type Operation int32
+
+const (
+	Operation_Addition       Operation = 0
+	Operation_Subtraction    Operation = 1
+	Operation_Division       Operation = 2
+	Operation_Multiplication Operation = 3
+	Operation_Exponentiation Operation = 4
+	Operation_UnaryMinus     Operation = 5
+	Operation_Logarithm      Operation = 6
+	Operation_SquareRoot     Operation = 7
+)
+
+// Enum value maps for Operation.
+var (
+	Operation_name = map[int32]string{
+		0: "Addition",
+		1: "Subtraction",
+		2: "Division",
+		3: "Multiplication",
+		4: "Exponentiation",
+		5: "UnaryMinus",
+		6: "Logarithm",
+		7: "SquareRoot",
+	}
+	Operation_value = map[string]int32{
+		"Addition":       0,
+		"Subtraction":    1,
+		"Division":       2,
+		"Multiplication": 3,
+		"Exponentiation": 4,
+		"UnaryMinus":     5,
+		"Logarithm":      6,
+		"SquareRoot":     7,
+	}
+)
+
+func (x Operation) Enum() *Operation {
+	p := new(Operation)
+	*p = x
+	return p
+}
+
+func (x Operation) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (Operation) Descriptor() protoreflect.EnumDescriptor {
+	return file_calc_proto_enumTypes[0].Descriptor()
+}
+
+func (Operation) Type() protoreflect.EnumType {
+	return &file_calc_proto_enumTypes[0]
+}
+
+func (x Operation) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use Operation.Descriptor instead.
+func (Operation) EnumDescriptor() ([]byte, []int) {
+	return file_calc_proto_rawDescGZIP(), []int{0}
+}
+
+type GetTaskResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	ExpressionId  int64                  `protobuf:"varint,2,opt,name=expression_id,json=expressionId,proto3" json:"expression_id,omitempty"`
+	Arg1          float32                `protobuf:"fixed32,3,opt,name=arg1,proto3" json:"arg1,omitempty"`
+	Arg2          float32                `protobuf:"fixed32,4,opt,name=arg2,proto3" json:"arg2,omitempty"`
+	Operation     Operation              `protobuf:"varint,5,opt,name=operation,proto3,enum=calc.Operation" json:"operation,omitempty"`
+	OperationTime int64                  `protobuf:"varint,6,opt,name=operation_time,json=operationTime,proto3" json:"operation_time,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetTaskResponse) Reset() {
+	*x = GetTaskResponse{}
+	mi := &file_calc_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetTaskResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetTaskResponse) ProtoMessage() {}
+
+func (x *GetTaskResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_calc_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetTaskResponse.ProtoReflect.Descriptor instead.
+func (*GetTaskResponse) Descriptor() ([]byte, []int) {
+	return file_calc_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GetTaskResponse) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *GetTaskResponse) GetExpressionId() int64 {
+	if x != nil {
+		return x.ExpressionId
+	}
+	return 0
+}
+
+func (x *GetTaskResponse) GetArg1() float32 {
+	if x != nil {
+		return x.Arg1
+	}
+	return 0
+}
+
+func (x *GetTaskResponse) GetArg2() float32 {
+	if x != nil {
+		return x.Arg2
+	}
+	return 0
+}
+
+func (x *GetTaskResponse) GetOperation() Operation {
+	if x != nil {
+		return x.Operation
+	}
+	return Operation_Addition
+}
+
+func (x *GetTaskResponse) GetOperationTime() int64 {
+	if x != nil {
+		return x.OperationTime
+	}
+	return 0
+}
+
+type PostResultRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	ExpressionId  int64                  `protobuf:"varint,2,opt,name=expression_id,json=expressionId,proto3" json:"expression_id,omitempty"`
+	Result        *float32               `protobuf:"fixed32,3,opt,name=result,proto3,oneof" json:"result,omitempty"`
+	Error         *string                `protobuf:"bytes,4,opt,name=error,proto3,oneof" json:"error,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *PostResultRequest) Reset() {
+	*x = PostResultRequest{}
+	mi := &file_calc_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *PostResultRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*PostResultRequest) ProtoMessage() {}
+
+func (x *PostResultRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_calc_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use PostResultRequest.ProtoReflect.Descriptor instead.
+func (*PostResultRequest) Descriptor() ([]byte, []int) {
+	return file_calc_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *PostResultRequest) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *PostResultRequest) GetExpressionId() int64 {
+	if x != nil {
+		return x.ExpressionId
+	}
+	return 0
+}
+
+func (x *PostResultRequest) GetResult() float32 {
+	if x != nil && x.Result != nil {
+		return *x.Result
+	}
+	return 0
+}
+
+func (x *PostResultRequest) GetError() string {
+	if x != nil && x.Error != nil {
+		return *x.Error
+	}
+	return ""
+}
+
+var File_calc_proto protoreflect.FileDescriptor
+
+const file_calc_proto_rawDesc = "" +
+	"\n" +
+	"\n" +
+	"calc.proto\x12\x04calc\x1a\x1bgoogle/protobuf/empty.proto\"\xc4\x01\n" +
+	"\x0fGetTaskResponse\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\x12#\n" +
+	"\rexpression_id\x18\x02 \x01(\x03R\fexpressionId\x12\x12\n" +
+	"\x04arg1\x18\x03 \x01(\x02R\x04arg1\x12\x12\n" +
+	"\x04arg2\x18\x04 \x01(\x02R\x04arg2\x12-\n" +
+	"\toperation\x18\x05 \x01(\x0e2\x0f.calc.OperationR\toperation\x12%\n" +
+	"\x0eoperation_time\x18\x06 \x01(\x03R\roperationTime\"\x95\x01\n" +
+	"\x11PostResultRequest\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\x12#\n" +
+	"\rexpression_id\x18\x02 \x01(\x03R\fexpressionId\x12\x1b\n" +
+	"\x06result\x18\x03 \x01(\x02H\x00R\x06result\x88\x01\x01\x12\x19\n" +
+	"\x05error\x18\x04 \x01(\tH\x01R\x05error\x88\x01\x01B\t\n" +
+	"\a_resultB\b\n" +
+	"\x06_error*\x8f\x01\n" +
+	"\tOperation\x12\f\n" +
+	"\bAddition\x10\x00\x12\x0f\n" +
+	"\vSubtraction\x10\x01\x12\f\n" +
+	"\bDivision\x10\x02\x12\x12\n" +
+	"\x0eMultiplication\x10\x03\x12\x12\n" +
+	"\x0eExponentiation\x10\x04\x12\x0e\n" +
+	"\n" +
+	"UnaryMinus\x10\x05\x12\r\n" +
+	"\tLogarithm\x10\x06\x12\x0e\n" +
+	"\n" +
+	"SquareRoot\x10\a2\x86\x01\n" +
+	"\vCalcService\x128\n" +
+	"\aGetTask\x12\x16.google.protobuf.Empty\x1a\x15.calc.GetTaskResponse\x12=\n" +
+	"\n" +
+	"PostResult\x12\x17.calc.PostResultRequest\x1a\x16.google.protobuf.EmptyB\x1fZ\x1dgithub.com/xLeSHka/calc/protob\x06proto3"
+
+var (
+	file_calc_proto_rawDescOnce sync.Once
+	file_calc_proto_rawDescData []byte
+)
+
+func file_calc_proto_rawDescGZIP() []byte {
+	file_calc_proto_rawDescOnce.Do(func() {
+		file_calc_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_calc_proto_rawDesc), len(file_calc_proto_rawDesc)))
+	})
+	return file_calc_proto_rawDescData
+}
+
+var file_calc_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_calc_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_calc_proto_goTypes = []any{
+	(Operation)(0),            // 0: calc.Operation
+	(*GetTaskResponse)(nil),   // 1: calc.GetTaskResponse
+	(*PostResultRequest)(nil), // 2: calc.PostResultRequest
+	(*emptypb.Empty)(nil),     // 3: google.protobuf.Empty
+}
+var file_calc_proto_depIdxs = []int32{
+	0, // 0: calc.GetTaskResponse.operation:type_name -> calc.Operation
+	3, // 1: calc.CalcService.GetTask:input_type -> google.protobuf.Empty
+	2, // 2: calc.CalcService.PostResult:input_type -> calc.PostResultRequest
+	1, // 3: calc.CalcService.GetTask:output_type -> calc.GetTaskResponse
+	3, // 4: calc.CalcService.PostResult:output_type -> google.protobuf.Empty
+	3, // [3:5] is the sub-list for method output_type
+	1, // [1:3] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_calc_proto_init() }
+func file_calc_proto_init() {
+	if File_calc_proto != nil {
+		return
+	}
+	file_calc_proto_msgTypes[1].OneofWrappers = []any{}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_calc_proto_rawDesc), len(file_calc_proto_rawDesc)),
+			NumEnums:      1,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_calc_proto_goTypes,
+		DependencyIndexes: file_calc_proto_depIdxs,
+		EnumInfos:         file_calc_proto_enumTypes,
+		MessageInfos:      file_calc_proto_msgTypes,
+	}.Build()
+	File_calc_proto = out.File
+	file_calc_proto_goTypes = nil
+	file_calc_proto_depIdxs = nil
+}
